--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,30 +1,22 @@
 // Setup
-@import "setup/variables";
-@import "setup/functions";
-@import "setup/mixins";
-@import "setup/typography";
+@import 'setup/variables';
+@import 'setup/functions';
+@import 'setup/mixins';
+@import 'setup/typography';
 
 // Basics
-@import "basics/helpers";
-@import "basics/layout";
-@import "basics/base";
-@import "basics/links";
-@import "basics/forms";
-
+@import 'basics/helpers';
+@import 'basics/layout';
+@import 'basics/base';
+@import 'basics/links';
+@import 'basics/forms';
 
 // Views
-@import "views/about-us";
-@import "views/home-page";
-@import "views/board-app";
-@import "views/review-app";
+@import 'views/about-us';
+@import 'views/home-page';
+@import 'views/board-app';
+@import 'views/review-app';
 
 // Components
-@import "cmps/app-header";
-@import "cmps/app-footer";
-@import "cmps/user-msg";
-
-
-
-
-
-
+@import 'cmps/app-header';
+@import 'cmps/user-msg';
