--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,6 +17,7 @@
 @import "views/home-page";
 @import "views/board-app";
 @import "views/review-app";
+@import "views/card-details";
 
 // Components
 @import "cmps/app-header";
