--- a/src/assets/styles/views/_workspace.scss
+++ b/src/assets/styles/views/_workspace.scss
@@ -1,6 +1,5 @@
 .workspace-container {
     .tabbed-pane-header{
-
         background-color: #f4f5f7;
         .tabbed-pane-header-wrapper {
         
@@ -30,6 +29,29 @@
             margin: 2px 2px 0;
             padding: 8px 20px;
             text-decoration: none;
+        }
+       
+    }
+    .nav-bar-workspace-container{
+        // display: flex;
+        // flex-direction: column;
+        position: absolute;
+        top :50px;
+        margin: 0;
+        padding: 10px;
+        height: 100%;
+        width: 20%;
+        background-color: white;
+        border-right: 1px solid gray;
+        border-collapse: collapse;
+        button{
+            color: rgb(107, 119, 140);
+            background-color:inherit;
+        }
+        .small-nav-bar-workspace{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
         }
     }
 }
