--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -14,10 +14,15 @@ html {
 }
 
 body {
-  font-size: rem(18px);
   margin: 0;
-  // max-width: 1024px;
-  margin: auto;
+  font-family: 'Charlie Text',sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #091e42;
+  background-color: #fff;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 h1,
