with get started in homepage

--- a/src/assets/styles/views/_home-page.scss
+++ b/src/assets/styles/views/_home-page.scss
@@ -46,4 +46,14 @@
             }
         }
     }
+    .second-home-page-container{
+        text-align: center !important;
+        padding-top: 5rem !important;
+        padding-bottom: 5rem !important;
+        width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    }
 }
