--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -13,17 +13,20 @@ html {
   color: $clr2;
 }
 
+
 body {
   margin: 0;
-  font-family: 'Charlie Text',sans-serif;
+  font-family: "Charlie Text", sans-serif;
   font-size: 20px;
   font-weight: 400;
   line-height: 1.5;
   color: #091e42;
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+
 
 h1,
 h2,
@@ -49,4 +52,14 @@ a {
 }
 a:hover {
   text-decoration: underline;
+}
+
+
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
