--- a/src/assets/styles/views/_board-app.scss
+++ b/src/assets/styles/views/_board-app.scss
@@ -1,31 +1,31 @@
 .board-list {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    
-    flex-wrap: wrap;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+
+  flex-wrap: wrap;
 }
 .board-preview {
-    background-color: $clr7;
-    color: whitesmoke;
-    border-radius: .2em;
-    margin: 5px;
-    text-align: center;
-    padding: 5px;
+  background-color: $clr7;
+  color: whitesmoke;
+  border-radius: 0.2em;
+  margin: 5px;
+  text-align: center;
+  padding: 5px;
 }
 
 .board-preview span {
-    color: pink;
+  color: pink;
 }
 
 .cart {
-    background-color: $clr2;
-    color: $clr6;
-    padding: 20px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
+  background-color: $clr2;
+  color: $clr6;
+  padding: 20px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 .cart li button {
-    margin: 5px;
+  margin: 5px;
 }
