after all changes in login-signup user

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -42,7 +42,7 @@
 @import 'views/board-app';
 @import 'views/review-app';
 @import 'views/workspace';
-
+@import 'views/login_signup';
 // Components
 @import 'cmps/app-header';
 @import 'cmps/app-footer';
