--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -1,83 +1,72 @@
 /* HOME PAGE HEADER */
 .main-header {
-    max-height: 44px;
-    max-height: 44px;
-    padding: 4px;
-    &.in-board {
-        background-color: rgba($color: #026aa7, $alpha: 1);
-        .btn-header-container {
-            flex-grow: 1;
-            align-items: center;
-            // max-width: 45%;
-            &:first-of-type {
-                justify-content: flex-start;
-            }
-            &:last-of-type {
-                justify-content: flex-end;
-            }
-        }
-        // header buttons //
-        .btn-header {
-            border: none;
-            // background-color: rgba(255, 255, 255, 0.3), rgba(9, 30, 66, 0.04), rgba(255, 255, 255, 0.2);
-            background-color: transparent;
-            border-radius: 0.2rem;
-            align-items: center;
-            color: #ffffff;
-            display: flex;
-            height: 32px;
+  max-height: 44px;
+  max-height: 44px;
+  padding: 4px;
 
-            // margin: 0 4px 0 0;
-            // padding: 0 6px 0;
-            white-space: nowrap;
-            transition: 0.15s;
-            cursor: pointer;
-            .txt-btn-wraper {
-                display: inline-block;
-                align-items: center;
-            }
-            span {
-                padding: 0 2px 0 8px;
-                // display: inline-block;
-            }
+  &.in-board {
+    background-color: rgba($color: #026aa7, $alpha: 1);
+  }
+  &.out-board {
+    background-color: rgba($color: #000000, $alpha: 0.15);
+  }
+  .back-screen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 100vh;
+    min-width: 100vw;
+  }
 
-            &:hover {
-                background-color: rgba(255, 255, 255, 0.2);
-            }
-            &.new-notific {
-                background-color: #e54c31d6;
-            }
-        }
+  .main-logo {
+    position: relative;
+    width: 100%;
+    height: 1.1rem;
+    padding: 0 1rem;
+  }
 
-        .logo {
-            align-items: center;
-            color: white;
-            span {
-                display: flex;
-                margin: 3px;
-                background-image: url(https://a.trellocdn.com/prgb/dist/images/header-logo-spirit-loading.87e1af770a49ce8e84e3.gif);
-                background-repeat: no-repeat;
-                background-size: contain;
-                background-position: center;
-                color: #026aa7;
-            }
-        }
+  .btn-header-container {
+    flex-grow: 1;
+    align-items: center;
+    // max-width: 45%;
+    &:first-of-type {
+      justify-content: flex-start;
     }
-    &.out-board {
-        
-        padding: 15px;
-        width: 90%;
-        justify-content: space-between;
-        transition: background 1s ease 0s;
-        padding-top: 1rem !important;
-        padding-bottom: 1rem !important;
-        box-sizing: unset;
-        align-items: center;
-        background-color: #eae6ff;
-        position: fixed;
-        .btn-header-container {
-            
-            display: none;
-        }
+    &:last-of-type {
+      justify-content: flex-end;
     }
+  }
+  // header buttons //
+  .btn-header {
+    border: none;
+    // background-color: rgba(255, 255, 255, 0.3), rgba(9, 30, 66, 0.04), rgba(255, 255, 255, 0.2);
+    background-color: transparent;
+    border-radius: 0.2rem;
+    align-items: center;
+    color: #ffffff;
+    display: flex;
+    height: 32px;
+
+    // margin: 0 4px 0 0;
+    // padding: 0 6px 0;
+    white-space: nowrap;
+    transition: 0.15s;
+    cursor: pointer;
+    .txt-btn-wraper {
+      display: inline-block;
+      align-items: center;
+    }
+    span {
+      padding: 0 2px 0 8px;
+      // display: inline-block;
+    }
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+    }
+  }
+
+  .logo {
+    align-items: center;
+  }
 }
