card-details-cmps

--- a/src/assets/styles/cmps/card-details-cmps/_card-details-activity-preview.scss
+++ b/src/assets/styles/cmps/card-details-cmps/_card-details-activity-preview.scss
@@ -1,3 +1,17 @@
 .activity-preview {
-    background-color: aquamarine;
+    display: flex;
+    width: 100%;
+
+    .activity-creator {
+        display: flex;
+
+        .activity-creator-member {
+            .activity-creator-member-avatar {
+                height: 30px;
+                width: 30px;
+            }
+        }
+    }
+    .activity-desc {
+    }
 }
