--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -1,5 +1,5 @@
 .main-board-header {
-  padding: 8px 4px 2px 8px;
-  display: flex;
-  flex-wrap: wrap;
+  height: auto;
+  padding: 8px 4px 4px 8px;
+  position: relative;
 }
