--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -49,7 +49,7 @@
 @import 'cmps/user-msg';
 @import 'cmps/board-header';
 @import 'cmps/home-header';
-
+@import 'cmps/side-nav';
 //Components card-details-cmps
 @import 'cmps/card-details-cmps/card-details-activity-list';
 @import 'cmps/card-details-cmps/card-details-activity-preview';
