--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -42,6 +42,9 @@
   &.column {
     flex-direction: column;
   }
+  &.row {
+    flex-direction: row;
+  }
   &.justify-center {
     justify-content: center;
   }
