after list draggebele

--- a/src/assets/styles/pages/_board.scss
+++ b/src/assets/styles/pages/_board.scss
@@ -21,9 +21,9 @@
   list-style-type: none;
   gap: 20px;
   position: relative;
-  overflow-x: auto;
-  overflow-y: hidden;
-  height: 100%;
+  // overflow-x: auto;
+  // overflow-y: hidden;
+  // height: 100%;
   margin: 0 0 4px;
   padding: 0 4px;
   white-space: nowrap;
