--- a/src/assets/styles/pages/_board.scss
+++ b/src/assets/styles/pages/_board.scss
@@ -20,10 +20,10 @@
   flex-direction: row;
   list-style-type: none;
   gap: 20px;
-  position: relative;
-  overflow-x: auto;
-  overflow-y: hidden;
-  height: 100%;
+  // position: relative;
+  // overflow-x: auto;
+  // overflow-y: hidden;
+  // height: 100%;
   margin: 0 0 4px;
   padding: 0 4px;
   white-space: nowrap;
