--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -42,6 +42,7 @@
 @import 'views/review-app';
 @import 'views/workspace';
 @import 'views/login_signup';
+@import 'cmps/popovers/pop-over';
 // Components
 @import 'cmps/app-header';
 @import 'cmps/app-footer';
