--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -64,3 +64,12 @@
 .portrait-ratio {
   @include aspect-ratio(9, 16);
 }
+
+//HIDDEN - SHOW
+.hidden {
+  display: none;
+}
+
+.show {
+  display: flex;
+}
