--- a/src/assets/styles/views/_card-details.scss
+++ b/src/assets/styles/views/_card-details.scss
@@ -11,7 +11,6 @@
   width: 768px;
 
   .card-body-container {
-
     .card-details-main {
       float: left;
       margin: 0;
@@ -28,9 +27,13 @@
 
       .btn-card-details {
         background-color: #091e420a;
-        color:#172b4d;
+        color: #172b4d;
         width: 100px;
       }
     }
   }
+}
+
+.card-details-content {
+  justify-content: space-between;
 }
