--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -41,7 +41,6 @@
 @import 'views/board-app';
 @import 'views/review-app';
 @import 'views/workspace';
-@import 'views/login_signup';
 @import 'cmps/popovers/pop-over';
 // Components
 @import 'cmps/app-header';
@@ -50,6 +49,8 @@
 @import 'cmps/board-header';
 @import 'cmps/home-header';
 @import 'cmps/side-nav';
+@import 'cmps/login-header';
+@import 'cmps/login_signup';
 //Components card-details-cmps
 @import 'cmps/card-details-cmps/card-details-activity-list';
 @import 'cmps/card-details-cmps/card-details-activity-preview';
