--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -7,8 +7,32 @@ $clr5: #dff0ea;
 $clr6: #fff;
 $clr7: #222;
 
-
 // Breakpoints
 $mobile-breakpoint: 460px;
 $narrow-breakpoint: 720px;
 $normal-breakpoint: 960px;
+
+// Colors
+$clr1: #0079bf; //primary-color
+$clr2: #ffffff; //white-color
+$clr3: #5e6c84; //muted-color
+$clr4: #172b4d; //txt-color
+$clr5: #c4c9cc; //main-nav home-user
+$clr6: #ebecf0; //list-color
+$clr7: #42526e; // card-details-color
+$clr8: #b04632;
+
+// BackgroundColors
+$bgClr1: #f4f5f7; //card-details-bg-color
+
+// Border radius
+$borderRad1: 3px;
+$borderRad2: 5px;
+
+// Breakpoints
+$mobile-breakpoint: 550px;
+$narrow-breakpoint: 640px;
+$details-breakpoint: 784px;
+$dashboard-breakpoint: 830px;
+$normal-breakpoint: 860px;
+$header-breakbpoint: 760px;
