logo and all login/home page changes

--- a/src/assets/styles/cmps/_home-header.scss
+++ b/src/assets/styles/cmps/_home-header.scss
@@ -17,6 +17,8 @@
     .logo {
       display: flex;
       align-items: center;
+      font-family: caveat;
+      font-weight: 750;
       font-size: 36px;
       line-height: 36px;
       color: #293856;
