--- a/src/assets/styles/views/_home-page.scss
+++ b/src/assets/styles/views/_home-page.scss
@@ -45,7 +45,12 @@
       :nth-child(1) {
         margin: 5px;
         flex-basis: 60%;
-        
+        -webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        &:hover {
+          box-shadow: 2px 2px 2px 2px #0065ff;
+          
+        }
       }
       :nth-child(2) {
         flex-basis: 40%;
@@ -83,7 +88,7 @@
     padding-bottom: 5rem !important;
     margin: auto;
   }
-  button{
+  button {
     display: inline-block;
     font-weight: 400;
     text-align: center;
@@ -94,12 +99,13 @@
     -ms-user-select: none;
     user-select: none;
     border: 1px solid transparent;
-    padding: .375rem .75rem;
+    padding: 0.375rem 0.75rem;
     font-size: 1.25rem;
     line-height: 1.5;
     border-radius: 6px;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    &:hover{
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+      box-shadow 0.15s ease-in-out;
+    &:hover {
       border-radius: 6px;
       border: none;
       outline: none;
@@ -109,5 +115,5 @@
       color: #fff;
       background-color: #0065ff;
     }
-    }
+  }
 }
