--- a/src/assets/styles/views/_home-page.scss
+++ b/src/assets/styles/views/_home-page.scss
@@ -47,6 +47,7 @@
         flex-basis: 60%;
         -webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
         transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        margin-left: 10px ;
         &:hover {
           box-shadow: 2px 2px 2px 2px #0065ff;
           
