--- a/src/assets/styles/views/_home-page.scss
+++ b/src/assets/styles/views/_home-page.scss
@@ -47,10 +47,9 @@
         flex-basis: 60%;
         -webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
         transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-        margin-left: 10px ;
+        margin-right: 15px;
         &:hover {
           box-shadow: 2px 2px 2px 2px #0065ff;
-          
         }
       }
       :nth-child(2) {
