--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -44,6 +44,7 @@
 @import 'cmps/popovers/pop-over';
 @import 'cmps/card-details-cmps/card-details-date';
 @import 'cmps/card-details-cmps/card-details-actions';
+@import 'cmps/card-details-cmps/card-details-labels';
 
 // Components
 @import 'cmps/app-header';
