--- a/src/assets/styles/cmps/card-preview/_card-preview.scss
+++ b/src/assets/styles/cmps/card-preview/_card-preview.scss
@@ -69,14 +69,6 @@
     overflow: hidden;
     box-shadow: 0px 1px 0 #c0c6d0;
 
-    &.cover-full {
-      font-size: 16px;
-      line-height: 20px;
-      font-weight: 500;
-      display: flex;
-      align-items: flex-end;
-    }
-
     .card-preview-labels {
       display: flex;
       flex-wrap: wrap;
@@ -91,51 +83,12 @@
       display: flex;
       align-items: flex-end;
     }
-    .card-preview-input {
-      transition: height 1s;
-      display: block;
-      min-height: 90px;
-      margin-bottom: 5px;
-      outline: none;
-      border: none;
-      resize: none;
-      width: 100%;
-      word-break: break-word;
-    }
-    .card-preview-bagdes {
-      display: flex;
-      flex-wrap: wrap;
-
-      .card-preview-icons {
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-
-        > * {
-          margin-bottom: 6px;
-        }
-
-        > *:not(:last-child) {
-          margin-inline-end: 5px;
-        }
-
-        svg {
-          display: flex;
-          justify-content: center;
-          color: #6b778c;
-          width: 16px;
-          height: 16px;
-        }
-      }
-      .card-preview-members {
-        display: flex;
-        flex: 1;
-        justify-content: flex-end;
-        margin-bottom: 4px;
-        > *:not(:last-child) {
-          margin-right: 4px;
-        }
-      }
-    }
   }
+}
+
+.card-content {
+  overflow: hidden;
+  padding: 6px 8px 2px;
+  position: relative;
+  z-index: 10;
 }
