--- a/src/assets/styles/setup/_main-setup.scss
+++ b/src/assets/styles/setup/_main-setup.scss
@@ -2,4 +2,6 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
+    Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
 }
