--- a/src/assets/styles/views/_card-details1.scss
+++ b/src/assets/styles/views/_card-details1.scss
@@ -1,6 +1,5 @@
 .card-details-container {
   overflow-y: scroll;
-  padding: 48px;
   height: 100%;
   width: 100%;
   z-index: 4;
@@ -12,7 +11,6 @@
     background-color: #f4f5f7;
     border-radius: 2px;
     margin: 48px 0 80px;
-    padding: 1rem;
     position: relative;
     width: 768px;
     z-index: 25;
@@ -80,25 +78,15 @@
       padding: 8px 0 0 8px;
       margin: 8px 16px 8px 32px;
       .header-content {
-        width: 100%;
-        svg {
-          width: 25px;
-          height: 25px;
-          margin-inline-end: 17px;
-        }
-      }
-      .bottom-list-name {
-        color: $clr3;
-        margin-inline-start: 40px;
-        span {
-          text-decoration: underline;
-        }
+        margin: 8px 16px 8px 32px;
+        padding: 8px 0 0 8px;
       }
     }
     .card-details-main-container {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      padding: 1rem;
     }
   }
 }
@@ -121,4 +109,8 @@
   &.transparent {
     background-color: transparent;
   }
+}
+
+.card-add-active {
+  margin-bottom: 7px;
 }
