this is it 30/9/21

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -59,6 +59,8 @@
 @import 'cmps/card';
 @import 'cmps/workspace-header';
 @import 'cmps/workspace-nav-bar';
+@import 'cmps/board-preview';
+
 
 @import 'cmps/card-preview/card-preview';
 @import 'cmps/card-preview/card-preview-labels';
