--- a/src/assets/styles/views/_workspace.scss
+++ b/src/assets/styles/views/_workspace.scss
@@ -37,7 +37,7 @@
       flex-direction: column;
     }
   }
-  .main-board-preview{
+  .main-board-preview {
     min-width: 100%;
   }
 }
@@ -47,11 +47,8 @@ button {
 }
 
 .all-boards-main {
-  margin: 40px 16px 0;
-  max-width: 825px;
+  // margin: 40px 16px 0;
+  // max-width: 825px;
   min-width: 288px;
   width: 100%;
 }
-
-
-
