--- a/src/assets/styles/cmps/_workspace-header.scss
+++ b/src/assets/styles/cmps/_workspace-header.scss
@@ -3,8 +3,9 @@
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
-    max-width: 650px;
+    // max-width: 650px;
     padding: 32px;
     position: relative;
     text-align: center;
+    background-color: #f4f5f7;
 }
