--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -13,10 +13,9 @@ html {
   color: $clr2;
 }
 
-
 body {
   margin: 0;
-  font-family: "Charlie Text", sans-serif;
+  font-family: 'Charlie Text', sans-serif;
   font-size: 20px;
   font-weight: 400;
   line-height: 1.5;
@@ -24,19 +23,6 @@ body {
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: caveat;
-  margin: 0 0 0.6em;
-  line-height: 1;
 }
 
 img {
@@ -51,10 +37,8 @@ a {
   text-decoration: none;
 }
 a:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
-
-
 
 .container {
   width: 100%;
