--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -1,26 +1,78 @@
-.board-preview {
-    background-color: $clr7;
-    color: whitesmoke;
-    border-radius: 0.2em;
-    margin: 5px;
-    text-align: center;
-    padding: 5px;
+.all-boards-main {
+  margin: 40px 10% 0;
+  min-width: 288px;
 }
 
-.board-preview-container {
-    height: 100vh;
-    .board-list {
-        display: flex;
-        flex-wrap: wrap;
-        height: 30vh;
+.board-list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
 
-        .board-preview-add-btn {
-            width: 100%;
-            height: 15vh;
-        }
-    }
-    .board-preview {
-        height: 15vh;
-        width: 100%;
-    }
+.board-preview-wrapper {
+  box-sizing: border-box;
+  cursor: pointer;
+  padding: 4px 8px;
+  position: relative;
+  flex-basis: 33%;
+}
+
+.board-preview {
+  color: #fff;
+  line-height: 20px;
+  border-radius: 3px;
+  padding: 8px;
+  position: relative;
+  height: 80px;
+}
+
+.board-preview-name {
+  word-wrap: break-word;
+  display: inline-block;
+  flex: 0 0 auto;
+  font-size: 16px;
+  font-weight: 700;
+  max-height: 40px;
+  overflow: hidden;
+  width: 100%;
+  margin: 0;
+}
+
+.board-preview-name h4 {
+  margin: 0;
+}
+
+//nav bar
+
+.board-preview-navbar {
+  color: #fff;
+  line-height: 20px;
+  border-radius: 3px;
+  padding: 8px;
+  position: relative;
+  height: 1rem;
+}
+
+.nav-bar-btns {
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  width: 100%;
+}
+
+.nav-bar-btns-name {
+  flex: 1;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 20px;
+  color: #172b4d;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.board-list-navbar {
+  margin-left: 4px;
+  padding: 0;
 }
