--- a/src/assets/styles/views/_card-details1.scss
+++ b/src/assets/styles/views/_card-details1.scss
@@ -28,7 +28,7 @@
       position: absolute;
       width: 40px;
       height: 40px;
-      top: 4px;
+      top: 0;
       right: 4px;
       z-index: 10;
       transition: background-color 85ms, color 85ms;
@@ -51,33 +51,7 @@
       }
     }
 
-    .card-details-archived {
-      > *:first-child {
-        font-size: 20px;
-        margin-inline-end: 22px;
-      }
-      background-color: #fdfae5;
-      background-image: linear-gradient(
-        to bottom right,
-        rgba(0, 0, 0, 0.05) 25%,
-        transparent 25%,
-        transparent 50%,
-        rgba(0, 0, 0, 0.05) 50%,
-        rgba(0, 0, 0, 0.05) 75%,
-        transparent 75%,
-        transparent
-      );
-      background-size: 14px 14px;
-      min-height: 30px;
-      padding: 12px;
-      position: relative;
-      h3 {
-        font-size: 16px;
-        line-height: 30px;
-      }
-    }
-
-    .card-details-header {
+    .ader {
       max-width: 672px;
       padding: 8px 0 0 8px;
       margin: 8px 16px 8px 32px;
@@ -104,17 +78,43 @@
   top: 0;
   width: 100%;
   z-index: 2;
-  &.darken {
-    background-color: rgba(0, 0, 0, 0.64);
-  }
-  &.heavy-dark {
-    background-color: rgba(0, 0, 0, 0.84);
-  }
-  &.transparent {
-    background-color: transparent;
-  }
+  background-color: rgba(0, 0, 0, 0.64);
 }
 
+.card-details-header {
+  margin: 8px 1px 8px 40px;
+  min-height: 32px;
+  position: relative;
+  z-index: 1;
+  &.cover-mode {
+    height: 116px;
+    min-height: 116px;
+    margin: 0;
+    background-size: initial;
+    background-origin: content-box;
+    padding: 0px;
+    box-sizing: border-box;
+    background-position: left center;
+  }
+}
 .card-add-active {
   margin-bottom: 7px;
+}
+
+.card-details-content {
+  padding: 8px 1px 8px 40px;
+}
+
+.card-details-title {
+  background: #0000;
+  border-radius: 3px;
+  box-shadow: none;
+  font-size: 20px;
+  font-weight: 600;
+  height: 32px;
+  line-height: 24px;
+  min-height: 24px;
+  padding: 4px 8px;
+  margin-left: 4px;
+  resize: none;
 }
