--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -72,6 +72,9 @@
 @import 'cmps/card-details-cmps/card-details-checklists';
 @import 'cmps/card-details-cmps/card-details-cover';
 @import 'cmps/card-details-cmps/card-details-data';
+@import 'cmps/card-details-cmps/card-details-date';
+@import 'cmps/card-details-cmps/card-details-description';
+
 @import 'cmps/card-details-cmps/card-details-desc';
 
 body,
