--- a/src/assets/styles/cmps/_workspace-nav-bar.scss
+++ b/src/assets/styles/cmps/_workspace-nav-bar.scss
@@ -1,12 +1,29 @@
 .main-board-preview {
-    width: 100% ;
+    width: 100%;
 }
 .nav-bar-workspace-horizontal {
+    background-color: #f4f5f7;
     margin: 0;
+    overflow-x: auto;
+    overflow-y: hidden;
     button {
-        border: none;
+        background-color: #fff;
+        border: 1px solid #dfe1e6;
+        border-bottom: 0;
+        border-radius: 3px 3px 0 0;
+        box-sizing: border-box;
+        display: inline-block;
+        font-weight: 700;
+        margin: 2px 2px 0;
+        padding: 8px 20px;
+        text-decoration: none;
+        cursor: default;
+        margin-bottom: -1px;
+        padding-bottom: 9px;
     }
 }
 hr {
     margin: 0;
+    border: 1px solid #dfe1e6;
+    // background-color: gray;
 }
