--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -75,7 +75,7 @@
 @import 'cmps/card-details-cmps/card-details-date';
 @import 'cmps/card-details-cmps/card-details-description';
 
-@import 'cmps/card-details-cmps/card-details-desc';
+// @import 'cmps/card-details-cmps/card-details-desc';
 
 body,
 button,
