--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -45,6 +45,7 @@
 @import 'cmps/card-details-cmps/card-details-date';
 @import 'cmps/card-details-cmps/card-details-actions';
 @import 'cmps/card-details-cmps/card-details-labels';
+@import 'cmps/popovers/label-popover-preview';
 
 // Components
 @import 'cmps/app-header';
@@ -60,7 +61,6 @@
 @import 'cmps/workspace-header';
 @import 'cmps/workspace-nav-bar';
 @import 'cmps/board-preview';
-
 
 @import 'cmps/card-preview/card-preview';
 @import 'cmps/card-preview/card-preview-labels';
