after change size

--- a/src/assets/styles/views/_card-details1.scss
+++ b/src/assets/styles/views/_card-details1.scss
@@ -65,6 +65,9 @@
       flex-direction: row;
       justify-content: space-between;
       padding: 1rem;
+      .card-details-main{
+        width: 100%;
+      }
     }
   }
 }
