--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -46,6 +46,9 @@
 @import 'cmps/card-details-cmps/card-details-actions';
 @import 'cmps/card-details-cmps/card-details-labels';
 @import 'cmps/popovers/label-popover-preview';
+@import 'cmps/popovers/cover-pop-over';
+@import 'cmps/card-details-cmps/card-details-cover';
+@import 'cmps/popovers/create-board-pop-over';
 
 // Components
 @import 'cmps/app-header';
