--- a/src/assets/styles/cmps/card-details-cmps/_card-details-labels.scss
+++ b/src/assets/styles/cmps/card-details-cmps/_card-details-labels.scss
@@ -1,39 +1,66 @@
 .card-details-labels {
-    .labels-container {
-        .label {
-            cursor: pointer;
-            color: $clr2;
-            border-radius: 3px;
-            box-sizing: border-box;
-            display: block;
-            float: left;
-            font-weight: 600;
-            height: 32px;
-            line-height: 32px;
-            margin: 0 4px 4px 0;
-            min-width: 40px;
-            padding: 0 12px;
-            width: auto;
-            &:hover {
-                opacity: 0.8;
-            }
-        }
-        .secondary-btn {
-            display: flex;
-            border-radius: $borderRad1;
-            border: none;
-            justify-content: center;
-            align-items: center;
-            width: 32px;
-            padding: 0;
-            height: 32px;
-            svg {
-                width: 16px;
-                height: 16px;
-                path {
-                    color: $clr4;
-                }
-            }
-        }
+  margin: 0 8px 8px 0;
+  .labels-container {
+    .label {
+      cursor: pointer;
+      color: $clr2;
+      border-radius: 3px;
+      box-sizing: border-box;
+      display: block;
+      float: left;
+      font-weight: 600;
+      height: 32px;
+      line-height: 32px;
+      margin: 0 4px 4px 0;
+      min-width: 40px;
+      padding: 0 12px;
+      width: auto;
+      &:hover {
+        opacity: 0.8;
+      }
     }
+    .secondary-btn {
+      display: flex;
+      border-radius: $borderRad1;
+      border: none;
+      justify-content: center;
+      align-items: center;
+      width: 32px;
+      padding: 0;
+      height: 32px;
+      svg {
+        width: 16px;
+        height: 16px;
+        path {
+          color: $clr4;
+        }
+      }
+    }
+  }
+}
+
+.color-palette {
+  width: 100%;
+  margin-bottom: 1.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  label[name='label-color'] {
+    width: 48px;
+    height: 32px;
+    margin: 0 rem(8px) rem(8px) 0;
+    border-radius: 3px;
+    cursor: pointer;
+    &:hover {
+      filter: brightness(90%);
+    }
+  }
+  input[type='radio'] {
+    opacity: 0;
+    position: absolute;
+    width: 0;
+    height: 0;
+  }
+  svg {
+    z-index: 2;
+  }
 }
