--- a/src/assets/styles/pages/_board.scss
+++ b/src/assets/styles/pages/_board.scss
@@ -40,6 +40,10 @@
   margin-bottom: 10px;
 }
 
+.list-add-containter {
+  margin: 2px 0 8px 8px;
+}
+
 .card-list-add {
   background-color: #cecece7a;
   width: 250px;
