--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -72,6 +72,8 @@
 @import 'cmps/card-details-cmps/card-details-activity-list';
 @import 'cmps/card-details-cmps/card-details-activity-preview';
 @import 'cmps/card-details-cmps/card-details-activity';
+@import 'cmps/card-details-cmps/card-details-checklist-item';
+@import 'cmps/card-details-cmps/card-details-checklist';
 @import 'cmps/card-details-cmps/card-details-checklists';
 @import 'cmps/card-details-cmps/card-details-cover';
 @import 'cmps/card-details-cmps/card-details-data';
