--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -65,7 +65,7 @@
 @import 'cmps/workspace-nav-bar';
 @import 'cmps/board-preview';
 @import 'cmps/nav-bar-board';
-
+@import 'cmps/card-preview/card-preview-date';
 @import 'cmps/card-preview/card-preview';
 @import 'cmps/card-preview/card-preview-labels';
 
